--- a/frontend/src/app/prescricao-medica/prescricao-medica.component.html
+++ b/frontend/src/app/prescricao-medica/prescricao-medica.component.html
@@ -51,6 +51,10 @@
                         class="ui-button-info">
                     </basis-datatable-button>
 
+                    <basis-datatable-button icon="laptop-chromebook" name="prescrever-procedimento" [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Procedimento Especial"
+                        class="ui-button-info">
+                    </basis-datatable-button>
+
                 </basis-datatable>
 
             </div>
