--- a/frontend/src/app/prescricao-medica/prescricao-medica.component.html
+++ b/frontend/src/app/prescricao-medica/prescricao-medica.component.html
@@ -51,7 +51,7 @@
                         class="ui-button-info">
                     </basis-datatable-button>
 
-                    <basis-datatable-button icon="laptop-chromebook" name="prescrever-procedimento" [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Procedimento Especial"
+                    <basis-datatable-button icon="laptop-chromebook" name="prescrever-procedimento" bTooltip="Prescrever Procedimento Especial"
                         class="ui-button-info">
                     </basis-datatable-button>
 
