adiciona pesquisa de medicamento por codigo e descrição com fuzzy e ativo

--- a/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
+++ b/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
@@ -10,7 +10,7 @@
                         pInputText
                         type="text"
                         pTooltip="Informe o Código."
-                        [(ngModel)]="Codigo"
+                        [(ngModel)]="codigo"
                     />
                     <label>Código</label>
                 </span>
@@ -21,7 +21,7 @@
                         pInputText
                         type="text"
                         pTooltip="Informe a Descrição."
-                        [(ngModel)]="Descricao"
+                        [(ngModel)]="descricao"
                     />
                     <label>Descrição</label>
                 </span>
