Listando dropdown de cirurgias-leito dinamicamente - BASIS-127312

--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/cirurgias-leito/cirurgias-leito.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/cirurgias-leito/cirurgias-leito.component.html
@@ -1,1 +1,10 @@
-<p>cirurgias-leito works!</p>
+<div class="ui-g-12">
+    <div class="ui-g-6">
+        <span class="md-inputfield">
+            <p-dropdown placeholder="Selecione..." [options]="listaCirurgiasLeito" name="cirurgiasLeito" required
+                #especiaisDiversos>
+            </p-dropdown>
+            <label>Cirurgias Leito</label>
+        </span>
+    </div>
+</div>
