--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/ortese-protese/ortese-protese.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/ortese-protese/ortese-protese.component.html
@@ -1,1 +1,19 @@
-<p>ortese-protese works!</p>
+<div class="ui-g-12">
+    <div class="ui-g-6">
+        <span class="md-inputfield">
+            <p-dropdown placeholder="Selecione..." [options]="listaOrtesesProteses" name="cirurgiasLeito" required
+                #especiaisDiversos>
+            </p-dropdown>
+            <label>Órteses/Próteses</label>
+        </span>
+    </div>
+</div>
+
+<div class="ui-g-12">
+    <div class="ui-g-4">
+        <span class="md-inputfield">
+            <input type="number" pInputText name="quantidade" />
+            <label>Quantidade</label>
+        </span>
+    </div>
+</div>
