Listando procedimentos especiais diversos dinamicamente - BASIS-127312

--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/diversos/diversos.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/diversos/diversos.component.html
@@ -1,7 +1,10 @@
-    <div class="ui-g-12">
+<div class="ui-g-12">
+    <div class="ui-g-6">
         <span class="md-inputfield">
-            <textarea [rows]="6" [cols]="30" pInputTextarea autoResize="autoResize"
-                id="observacao" name="observacao"></textarea>
-            <label>Observações</label>
+            <p-dropdown placeholder="Selecione..." [options]="listaEspeciaisDiversos" name="especiaisDiversos" required
+                #especiaisDiversos>
+            </p-dropdown>
+            <label>Especiais Diversos</label>
         </span>
     </div>
+</div>
