Correções em componente Endereço

--- a/frontend/src/app/pacientes/components/formulario-paciente/endereco/endereco.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/endereco/endereco.component.html
@@ -7,7 +7,7 @@
                         nAutoComplete
                         [service]="municipioService"
                         field="nome"
-                        formControlName="municipio"
+                        formControlName="municipioId"
                         label="Município"
                     ></div>
                 </span>
@@ -46,7 +46,7 @@
                 <span class="ui-float-label">
                     <p-dropdown
                         [options]="opcoesDeTipoDeEndereco"
-                        formControlName="tipo"
+                        formControlName="tipoDoEndereco"
                     ></p-dropdown>
                     <label>Tipo de Endereço</label>
                 </span>
