adiciona metodo de cadastro de medicamento

--- a/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
+++ b/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="form" (ngSubmit)="cadastrar(form)">
-    <div class="ui-g ui-fluid">
+<div class="ui-g ui-fluid">
+    <form [formGroup]="form" (ngSubmit)="cadastrar()">
         <div class="ui-g-12">
             <div class="ui-g-12">
                 <h1>Cadastrar Medicamento</h1>
@@ -112,5 +112,5 @@
                 </div>
             </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
