FormGroup dos componentes - BASIS-127312

--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/cirurgias-leito/cirurgias-leito.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/cirurgias-leito/cirurgias-leito.component.html
@@ -1,10 +1,13 @@
-<div class="ui-g-12">
-    <div class="ui-g-6">
-        <span class="md-inputfield">
-            <p-dropdown placeholder="Selecione..." [options]="listaCirurgiasLeito" name="cirurgiasLeito" required
-                #especiaisDiversos>
-            </p-dropdown>
-            <label>Cirurgias Leito</label>
-        </span>
+<form [formGroup]="cirurgiasLeitoForm">
+    <div class="ui-g-12" >
+        <div class="ui-g-6">
+            <span class="md-inputfield">
+                <p-dropdown placeholder="Selecione..." [options]="listaCirurgiasLeito" formControlName="descricao" required
+                    #especiaisDiversos>
+                </p-dropdown>
+                <label>Cirugias Leito</label>
+            </span>
+        </div>
     </div>
-</div>
+</form>
+
