alterando botão radio situação

--- a/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
+++ b/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
@@ -91,16 +91,20 @@
             <div class="ui-g-12">
                 <h3>Situação</h3>
                 <p-radioButton
+                    type="radio"
                     name="groupname"
                     value="true"
-                    formGroupName="ativo"
+                    formControlName="ativo"
                     label="Ativo "
+                    pRadioButton
                 ></p-radioButton>
                 <p-radioButton
+                    type="radio"
                     name="groupname"
                     value="false"
-                    formGroupName="ativo"
+                    formControlName="ativo"
                     label="Inativo"
+                    pRadioButton
                 ></p-radioButton>
             </div>
             <div class="ui-g-12">
