Correções em mensagens

--- a/frontend/src/app/pacientes/components/formulario-paciente/dados-pessoais/dados-pessoais.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/dados-pessoais/dados-pessoais.component.html
@@ -1,14 +1,19 @@
 <div class="ui-g ui-fluid" [formGroup]="dadosPessoais">
     <div class="ui-g-12">
         <div class="ui-g-6 ui-sm-12">
-            <span class="ui-float-label">
+            <span class="md-inputfield" #notification form-notification name="nome">
                 <input
                     type="text"
                     pInputText
+                    [ngClass]="{ 'ng-invalid ng-dirty': notification.message }"
                     pTooltip="Digite o nome do paciente."
                     formControlName="nome"
                 />
                 <label>Nome Completo</label>
+                <nValidationMessage
+                    [control]="nome"
+                    **ngIf="!notification.message"
+                ></nValidationMessage>
             </span>
         </div>
         <div class="ui-g-6 ui-sm-12">
