--- a/frontend/src/app/pacientes/components/formulario-paciente/telefone/telefone.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/telefone/telefone.component.html
@@ -51,7 +51,12 @@
                 </span>
             </div>
         </div>
-        <p-button label="Adicionar" type="button" (onClick)="adicionarTelefoneALista()"></p-button>
+        <p-button
+            label="Adicionar"
+            [disabled]="telefone.invalid"
+            type="button"
+            (onClick)="adicionarTelefoneALista()"
+        ></p-button>
         <basis-datatable type="memory" [value]="telefones.value">
             <p-column header="Tipo" field="tipo"></p-column>
             <p-column header="DDD" field="ddd"></p-column>
